@@ -13,6 +13,7 @@
 - Change: [#14751] “No construction above tree height” limitation now allows placing high trees.
 - Change: [#14841] Redesign the About window, including new button to copy the current version info.
 - Fix: [#11829] Visual glitches and crashes when using RCT1 assets from mismatched or corrupt CSG1.DAT and CSG1i.DAT files.
+- Fix: [#12262] Windows can appear off screen with small screens or high scaling.
 - Fix: [#13581] Opening the Options menu causes a noticeable drop in FPS.
 - Fix: [#13894] Block brakes do not animate.
 - Fix: [#13986] OpenGL: Track preview window, flip/rotate button do not update the thumbnail.
